- Fixed bug #38511, #38473, #38263 (Fixed session extension request shutdown
  order to ensure it is shutdown before the extensions it may depend on).
  (Ilia)
- Fixed bug #38488 (Access to "php://stdin" and family crashes PHP on win32).
  (Dmitry)
- Fixed bug #38315 (Constructing in the destructor causes weird behaviour).
  (Dmitry)
- Fixed bug #38265 (heap corruption). (Dmitry)
- Fixed PECL bug #8112 (OCI8 persistent connections misbehave when Apache 
  process times out). (Tony)


17 Aug 2006, PHP 5.2.0RC2
- Increased default memory limit to 16 megabytes to accommodate for a more
  accurate memory utilization measurement.
- Updated libsqlite in ext/pdo_sqlite to 3.3.7. (Ilia)
- Added support for httpOnly flag for session extension and cookie setting
  functions. (Scott MacVicar, Ilia)
- Added version specific registry keys to allow different configurations for
  different php version. (Richard, Dmitry)
- In addition to path to php.ini, PHPRC now may specify full file name. (Dmitry)
- Added "PHPINIDir" Apache directive to apache and apache_hooks SAPIs. (Dmitry)
- Added an optional boolean parameter to memory_get_usage() and 
  memory_get_peak_usage() to get memory size allocated by emalloc() or real
  size of memory allocated from system. (Dmitry)
- Implemented #38357 (dbase_open can't open DBase 3 dbf file).
  (rodrigo at fabricadeideias dot com, Mike)

- Moved extensions to PECL:
  . ext/filepro (Derick, Tony)
  . ext/hwapi (Derick, Tony)

- Improved SNMP extension: (Jani)
  . Renamed snmp_set_oid_numeric_print() to snmp_set_oid_output_format().
  . Added 2 new constants: SNMP_OID_OUTPUT_FULL and SNMP_OID_OUTPUT_NUMERIC
  . Fixed bug #37564 (AES privacy encryption not possible due to net-snmp 5.2
    compatibility issue). (Patch: scott dot moynes+php at gmail dot com)

- Improved OpenSSL extension: (Pierre)
  . Added support for all supported algorithms in openssl_verify
  . Added openssl_pkey_get_details, returns the details of a key