@@ -3974,9 +3974,13 @@ PHP_MINIT_FUNCTION(basic)
 	REGISTER_MATH_CONSTANT(M_PI_4);
 	REGISTER_MATH_CONSTANT(M_1_PI);
 	REGISTER_MATH_CONSTANT(M_2_PI);
+	REGISTER_MATH_CONSTANT(M_SQRTPI);
 	REGISTER_MATH_CONSTANT(M_2_SQRTPI);
+	REGISTER_MATH_CONSTANT(M_LNPI);
+	REGISTER_MATH_CONSTANT(M_EULER);
 	REGISTER_MATH_CONSTANT(M_SQRT2);
 	REGISTER_MATH_CONSTANT(M_SQRT1_2);
+	REGISTER_MATH_CONSTANT(M_SQRT3);
 	REGISTER_DOUBLE_CONSTANT("INF", php_get_inf(), CONST_CS | CONST_PERSISTENT);
 	REGISTER_DOUBLE_CONSTANT("NAN", php_get_nan(), CONST_CS | CONST_PERSISTENT);
 
